--- a/docker-compose/docker-compose-consul-standalone.yml
+++ b/docker-compose/docker-compose-consul-standalone.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   consul:
+    container_name: consul
     image: consul:latest
     command: "agent -server -ui -node=server1 -bootstrap-expect=1 -client=0.0.0.0"
     ports:
