--- a/docker-compose/docker-compose-jenkins.yml
+++ b/docker-compose/docker-compose-jenkins.yml
@@ -1,14 +1,16 @@
-version: '3'
-
+version: '3.4'
+#get initial password:
+#$ docker exec jenkins cat /var/jenkins_home/secrets/initialAdminPassword
 services:
   jenkins:
+    container_name: jenkins
     image: jenkins/jenkins:lts
     privileged: true
     user: root
+    restart: always
     ports:
-      - 8081:8080
+      - 9000:8080
       - 50000:50000
-    container_name: jenkins
     volumes:
       - ~/jenkins:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
